--- a/package.json
+++ b/package.json
@@ -1,36 +1,6 @@
 {
-    "name": "auctions",
+    "name": "@visualizevalue/auctions",
     "version": "0.0.1",
     "author": "jalil <jalil@vv.xyz>",
-    "devDependencies": {
-        "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
-        "@nomicfoundation/hardhat-ledger": "^1.0.3",
-        "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
-        "abitype": "^1.0.6",
-        "dotenv": "^16.4.5",
-        "hardhat": "^2.22.7",
-        "hardhat-contract-sizer": "^2.10.0",
-        "scripty.sol": "^2.1.1",
-        "viem": "2.x"
-    },
-    "dependencies": {
-        "@nomicfoundation/hardhat-ignition": "^0.15.5",
-        "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
-        "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-        "@nomicfoundation/hardhat-verify": "^2.0.0",
-        "@nomicfoundation/hardhat-viem": "^2.0.0",
-        "@nomicfoundation/ignition-core": "^0.15.5",
-        "@openzeppelin/contracts": "^5.0.2",
-        "@openzeppelin/contracts-upgradeable": "^5.0.2",
-        "@types/chai": "^4.2.0",
-        "@types/chai-as-promised": "^7.1.6",
-        "@types/mocha": ">=9.1.0",
-        "@visualizevalue/mint-utils": "workspace:../utils",
-        "chai": "^4.2.0",
-        "hardhat-chai-matchers-viem": "^2.0.8",
-        "hardhat-gas-reporter": "^2.2.0",
-        "solidity-coverage": "^0.8.1",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.5.4"
-    }
+    "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
