--- a/app/package.json
+++ b/app/package.json
@@ -1,39 +1,41 @@
 {
-    "name": "@visualizevalue/auctions-app-base",
-    "version": "0.0.11",
-    "type": "module",
-    "main": "./nuxt.config.ts",
-    "scripts": {
-        "build": "nuxt build",
-        "dev": "nuxt dev --port 4242",
-        "generate": "nuxt generate",
-        "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
-    },
-    "dependencies": {
-        "@csstools/postcss-global-data": "^2.1.1",
-        "@nuxtjs/i18n": "^8.5.5",
-        "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-        "@pinia/nuxt": "^0.5.3",
-        "@tanstack/vue-query": ">=5.45.0",
-        "@types/node": "^22.5.4",
-        "@visualizevalue/mint-utils": "^0.0.4",
-        "@vueuse/components": "^10.11.0",
-        "@vueuse/core": "^11.1.0",
-        "@wagmi/core": "^2.13.5",
-        "@wagmi/vue": "^0.0.40",
-        "buffer": "^6.0.3",
-        "luxon": "^3.5.0",
-        "postcss-custom-media": "^10.0.6",
-        "postcss-custom-selectors": "^7.1.10",
-        "postcss-nested": "^6.0.1",
-        "postcss-preset-env": "^9.5.13",
-        "viem": "2.x",
-        "vite": "^5.4.3",
-        "vue-virtual-scroller": "2.0.0-beta.8"
-    },
-    "devDependencies": {
-        "nuxt": "^3.14.159",
-        "typescript": "^5.5.4"
-    }
+  "name": "@visualizevalue/auctions-app-base",
+  "version": "0.0.11",
+  "type": "module",
+  "main": "./nuxt.config.ts",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev --port 4242",
+    "generate": "nuxt generate",
+    "format": "prettier --write .",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@csstools/postcss-global-data": "^2.1.1",
+    "@nuxtjs/i18n": "^8.5.5",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@pinia/nuxt": "^0.5.3",
+    "@tanstack/vue-query": ">=5.45.0",
+    "@types/node": "^22.5.4",
+    "@visualizevalue/mint-utils": "^0.0.4",
+    "@vueuse/components": "^10.11.0",
+    "@vueuse/core": "^11.1.0",
+    "@wagmi/core": "^2.13.5",
+    "@wagmi/vue": "^0.0.40",
+    "buffer": "^6.0.3",
+    "luxon": "^3.5.0",
+    "postcss-custom-media": "^10.0.6",
+    "postcss-custom-selectors": "^7.1.10",
+    "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^9.5.13",
+    "viem": "2.x",
+    "vite": "^5.4.3",
+    "vue-virtual-scroller": "2.0.0-beta.8"
+  },
+  "devDependencies": {
+    "nuxt": "^3.14.159",
+    "prettier": "^3.6.2",
+    "typescript": "^5.5.4"
+  }
 }
